# mellotron

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  build.sh  build_cc.sh
cmake/Modules/: FindCubature.cmake  FindMeshPI.cmake  FindStrattoCalculator.cmake  FindZernike.cmake  Findcuba.cmake  LibFindMacros.cmake
doc/: cylinder_with_titles_and_axis.pvsm  line_with_titles_and_axis.pvsm  mellotron.tex  mellotron_ref.bib  physical_model.tex  sphere_with_titles_and_axis.pvsm
include/: mellotron
include/mellotron_bits/: ParticleObserver.hpp  ParticleObserver_bones.hpp  ParticleObserver_meat.hpp  Particle_bones.hpp  Particle_meat.hpp
include/mellotron_bits/common/: PhysicalConstants.hpp  StandardLibraryExtensions.hpp
include/mellotron_bits/driver/: Envelope_bones.hpp  Envelope_meat.hpp  ParticleObserver_bones.hpp  ParticleObserver_meat.hpp  Particle_bones.hpp  Particle_meat.hpp
include/mellotron_bits/fields/: MellotronUnits.hpp  SalaminTightlyFocused.hpp  eDipoles.hpp
module_templates/: cc_module_template.in
scheduler_templates/: execute-mellotron-job-cc.sh  submit-mellotron-job-cc.bqtools
simulations/: AnalysisMELLOTRON.py  ComputeNormalizationConstantSalaminLinear.cpp  GenerateInitialConditions.py  InitialConditionsPairProduction.py  IntegrationSalamin.cpp  IntegrationSalaminIonized.cpp  IntegrationStrattoLinear.cpp  IntegrationStrattoLinearSG.cpp  IntegrationStrattoLinearSGZernike.cpp  IntegrationStrattoLinearZernike.cpp  IntegrationStrattoMosaic.cpp  IntegrationStrattoMosaicSG.cpp  IntegrationStrattoMosaicSGZernike.cpp  IntegrationStrattoRadial.cpp  README.md  StrattoCalculatorWrapper.hpp  automaticStart.sh  compile.sh  compileAll.sh  config.xml  configSalamin.xml  configStrattoLinear.xml  configStrattoLinearSG.xml  configStrattoLinearSGZernike.xml  configStrattoMosaic.xml  configStrattoMosaicSG.xml  configStrattoMosaicSGZernike.xml  configStrattoRadial.xml  mammouthStart.sh  manageOutputs.py  producePlots.py
src/: Particle.cpp
tests/: CMakeLists.txt  UnitTest-Envelope.cpp  UnitTest-FFT.py  UnitTest-Particle.cpp  UnitTest-ParticleObserverLienardWiechert.cpp  UnitTest-SalaminTightlyFocused.cpp  UnitTest-SalaminTightlyFocused_plot.py  UnitTest-StrattoCalculatorWrapper.cpp  UnitTest-eDipoles.cpp  compile_test.sh
tests/test_data/: SalaminField.txt  SalaminField_Bx.txt  SalaminField_By.txt  SalaminField_Bz.txt  SalaminField_Ex.txt  SalaminField_Ey.txt  SalaminField_Ez.txt  SalaminField_qed.txt
tests/theoretical_tests/: FixSalaminEnergy.mw
theory/: RadiationReactionExplicitExpressions
